@@ -182,12 +182,17 @@ func ipNatForObject(obj srvObj, dst jsonMap) {
 	}
 }
 
-// Zone with network 0/0 doesn't have an aggregate 0/0.
 func (c *spoc) getZoneName(z *zone) string {
+	// Ignore IPv6 part of dual stack zone.
+	// This must match check in exportZone2Areas.
+	if z.ipV6 && z.combined46 != nil {
+		z = z.combined46
+	}
 	ipp := c.getNetwork00(z.ipV6).ipp
 	if any := z.ipPrefix2aggregate[ipp]; any != nil {
 		return any.name
 	} else {
+		// Zone with network 0/0 doesn't have an aggregate 0/0.
 		return z.name
 	}
 }
@@ -1307,6 +1312,9 @@ func (c *spoc) exportMasterOwner(dir string, masterOwner string) {
 func (c *spoc) exportZone2Areas(dir string) {
 	result := make(jsonMap)
 	for _, z := range c.allZones {
+		if z.ipV6 && z.combined46 != nil {
+			continue
+		}
 		var l stringList
 		a := z.inArea
 		for a != nil {
